# rtype

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: create_branches.yml
client/: CMakeLists.txt
client/src/: Client.cpp  GameClient.cpp  GameClient.hpp  main.cpp
common/: CommonDefs.hpp  ErrorHandler.hpp
libs/: CMakeLists.txt
libs/ecs/: CollisionSystem.hpp  Component.hpp  Components.hpp  EnemyMovementSystem.hpp  Entity.hpp  Message.hpp  PairHash.hpp  Registry.hpp  System.hpp
libs/ecs/Graphic/: ComponentManager.hpp  GraphicComponents.hpp  SparseArray.hpp  UniqueEntity.hpp  Utils.hpp
libs/ecs/systems/GraphicSystem/: GraphicSystem.cpp  GraphicSystem.hpp
libs/ecs/systems/GraphicSystem/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.hpp
libs/ecs/systems/GraphicSystem/EntityManager/: EntityManager.cpp  EntityManager.hpp
libs/ecs/systems/GraphicSystem/EventSystem/: EventSystem.cpp  EventSystem.hpp
libs/ecs/systems/GraphicSystem/GameOverSystem/: GameOverSystem.cpp  GameOverSystem.hpp
libs/ecs/systems/GraphicSystem/SpriteSystem/: SpriteSystem.cpp  SpriteSystem.hpp
libs/ecs/systems/GraphicSystem/TextureLoader/: TextureLoader.cpp  TextureLoader.hpp
scripts/linux_macos/: build.sh  clean.sh  format.sh  setup.sh
scripts/windows/: build.bat  clean.bat  format.bat  setup.bat
server/: CMakeLists.txt
server/src/: main.cpp
server/src/core/: MainServer.cpp  MainServer.hpp
server/src/game/: Client.cpp  Client.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Server.hpp
server/src/utilities/: GameUtilities.hpp  HelpUtilities.hpp  IPResolver.hpp  RandomUtilities.hpp
